--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
+sudo: required
+
 language: go
+
+services:
+  - docker
 
 go:
   - 1.5
@@ -14,6 +19,5 @@ install:
   - go get golang.org/x/net/context
 
 before_script:
-  - go build -o $HOME/gopath/src/github.com/coreos/etcd/etcd.run github.com/coreos/etcd
-  - $HOME/gopath/src/github.com/coreos/etcd/etcd.run &
+  - docker run --name etcd quay.io/coreos/etcd:v2.3.6
   - sleep 2
