--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ install:
   - go get golang.org/x/net/context
 
 before_script:
-  - docker run --name etcd quay.io/coreos/etcd:v2.3.6 &
+  - docker run --name etcd -p 4001:4001 quay.io/coreos/etcd:v2.3.6 &
   - sleep 2
