--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ install:
   - go get golang.org/x/net/context
 
 before_script:
-  - docker run --name etcd -p 4001:4001 quay.io/coreos/etcd:v2.3.6 &
+  - docker pull quay.io/coreos/etcd:v2.3.6
+  - docker run --name etcd -d -p 4001:4001 quay.io/coreos/etcd:v2.3.6 -name etcd0 -advertise-client-urls http://127.0.0.1:4001 -listen-client-urls http://0.0.0.0:4001 -initial-cluster-state new
   - sleep 2
